# Lunar-G2R

./: LICENSE  readme.md
BRDFGenerator/: USER_MANUAL.md  generator.py
BRDFGenerator/data/: training_metadata.json
Checkpoints/: metadata.json  train_dataset.csv  tst_dataset.csv  tst_dataset_old.csv  val_dataset.csv
ImageSimulator/: USER_MANUAL.md  geotiff_to_geo.py  simulator.py
ImageSimulator/data/: traj_test_nadir.csv  tycho_conf.json  tycho_traj.csv
ImageSimulator/data/materials/: polynomial_2p.brdf  polynomial_3p_cos2g.brdf  polynomial_3p_cos2i.brdf  polynomial_4p_cos2g.brdf  polynomial_4p_cos2g_cos2i.brdf  polynomial_4p_halfvec.brdf
ImageSimulator/data/textures/geo/: equirectangular_tycho.txr
ImageSimulator/descentimagegenerator/descentimagegenerator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/: README.md  pyproject.toml
src/brdfgen/: check_gt.py  data.py  eval.py  evaluate.py  find_nan_images.py  model.py  utils.py
src/brdfgen.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/brdfgen/mydata/materials/: hapke_diff.brdf  polynomial_4p_cos2i.brdf
src/brdfgen/mydata/textures/procedural/: tile.geo
src/src/brdfgen/: config.py  dig.py  metrics.py  render.py  train.py
src/src/brdfgen/mydata/materials/: lambertian_diff.brdf  polynomial_3p_cst.brdf
src/src/brdfgen/mydata/textures/geo/: equirectangular_globals.txr
src/src/brdfgen/mydata/textures/procedural/: tile.txr
