[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "brdfgen"
dynamic = ["version"]
authors = [
{name="Clémentine Grethen", email="clementine.grethen@irit.fr"},
  { name="Roland Brochard", email="roland.brochard@airbus.com" },
  { name="Nicolas Menga", email="nicolas.menga@airbus.com" },
]
description = "Library for Lunar Software BRDF generator"
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
keywords = ["surrender", "deeplearning", "image"]
dependencies = [
    'surrender>=10',
    'numpy',
    'matplotlib',
    'opencv-python',
    'scipy',
    'tqdm',
    'torch',
    'rasterio',
    'dataclasses-json',
    'shapely',
    'lupa',
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.geo", "*.txr", "*.brdf"]

[project.urls]
"Homepage" = "https://aforge-frdr.biz.nstd.fr.airbusds.corp/gitlab/computer-vision/lunar-software"
"Repository" = "https://aforge-frdr.biz.nstd.fr.airbusds.corp/gitlab/computer-vision/lunar-software"
